<resources>
    <string name="app_name">iStyleApp</string>
    <string name="logo_istyle">Logo iStyle</string>
    <string name="fondo">fondo</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="texto_register">Bringing iStyle Members the best products, inspiration and quality in the actual market.</string>
    <string name="cancel">Cancel</string>
    <string name="istyle_com">iStyle.com</string>
    <string name="logo">Logo</string>
    <string name="header_login">Enter your email and password to log in</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="privacy_terms">By continuing, I agree the iStyle\'s Privacy Policy and Terms of Use</string>
    <string name="login">Log in</string>
    <string name="istyle_streetwear_app">iStyle Streetwear App</string>
    <string name="Text_register">Enter your name and password to register to iStyle</string>
    <string name="promotions">Promotions</string>
    <string name="portada">portada</string>
    <string name="imagen">image</string>
    <string name="helloworld">HelloWorld</string>
    <string name="button">Button</string>
    <string name="atras">Back</string>
    <string name="picproduct">PicProduct</string>
    <string name="nombre_producto">Product name</string>
    <string name="precio_del_producto">Product price</string>
    <string name="perfil">profile</string>
    <string name="nombre_del_usuario">Username</string>
    <string name="mi_cuenta">My Account</string>
    <string name="usuario_ejemplo_com">usuario@ejemplo.com</string>
    <string name="editar_perfil">Edit Profile</string>
    <string name="cerrar_sesion">Log out</string>
    <string name="products">Products</string>
    <string name="categoria">Category</string>
    <string name="confirm_password">Confirm password</string>
    <string name="or_create_account">Or create account</string>
    <string name="telefono">Phone</string>
    <string name="email">Email</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="login_other_methods">Use other method</string>
    <string name="login_with_google">Google</string>
    <string name="default_web_client_id">747345339984-dvmhd2eadkdmrecvrm1l6h0oh0q50ahj.apps.googleusercontent.com</string>
    <string name="direccion">Address</string>
    <string name="tu_carrito">Your cart:</string>
    <string name="proceder_al_pago"><![CDATA[Go to payment ->]]></string>
    <string name="volver_atr_s">Go back</string>
    <string name="ticket_de_compra">Shopping ticket</string>
    <string name="precio_total_0_00">Total price: €0.00</string>
    <string name="producto">Product</string>
    <string name="_0_00">€0.00</string>
    <string name="_0">0</string>
</resources>