<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/productsq">

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:contentDescription="@string/picproduct"
            android:maxWidth="120dp"
            android:maxHeight="120dp"
            tools:srcCompat="@tools:sample/avatars[3]"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/tvNomProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/nombre_producto"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/tvCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/categoria"
            android:textStyle="italic"
            android:textColor="#000000"
            android:textSize="14sp"
            android:background="@drawable/categorytext"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/tvPrecioProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="20sp"
            android:textColor="#FFB300"
            android:textStyle="bold"
            android:text="@string/precio_del_producto"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>