<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/productsq">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/imgProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/picproduct"
                android:maxWidth="120dp"
                android:maxHeight="120dp"
                tools:srcCompat="@tools:sample/avatars[3]" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNomProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/nombre_producto"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/tvCategoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/categorytext"
                    android:text="@string/categoria"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/tvCantidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cantidad"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/tvPrecioProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/precio_del_producto"
                    android:textColor="#FFB300"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/tvPrecioTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Precio Total"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/buttonSumo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+" />

            <Button
                android:id="@+id/buttonResto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>